VHCS 2.4.7 Changelog
~~~~~~~~~~~~~~~~~~~~~~~~~~

2005-12-12 Erik Lehmann

	- GUI:
		* Changed: changed hardcoded '/var/www/vhcs2/' to vhcs2.conf based solution
		* Deleted: deleted some empty files in gui/admin (only part of vhcs2.4.7-alpha and vhcs2.4.7-beta)
	- ENGINE:
		* Fixed bug: fix problem in vhcs2-setup during detecting ip
		* Changed: changed hardcoded '/var/www/vhcs2/' to vhcs2.conf based solution
		* Changed: set-engine-permissions.sh now use to variables from vhcs2.conf (no longer hardcoded path/owners)
		* Changed: set-gui-permissions.sh now use to variables from vhcs2.conf (no longer hardcoded path/owners)

2005-12-11 Erik Lehmann

	- GUI:
		* Updated: gui/tools/pma to phpMyAdmin-2.7.0-pl1

2005-12-10 Erik Lehmann

	- INSTALLATION:
		* Fixed bug: typo error in HOWTO-Update

2005-12-09 Carsten Schoene

	- INSTALLATION:
		* Added: SuSE configuration files

2005-12-08 Erik Lehmann

	- MISC:
		* Added: New docs folder in package
	- GUI:
		* Deleted: some unneeded files from webmail and filemanager
	- ENGINE:
		* Fixed bug #0000256: typo error at DATABASE_NAME in vhcs2.conf 

2005-12-07 Erik Lehmann

	- GUI
		* Fixed bug #0000255: hardcoded page titles in some admin gui templates and one client template

2005-12-06 Erik Lehmann

	- INSTALLATION:
		* Fixed bug #0000248: "set permission script not found" in vhcs2-setup during execute from /tmp
	- GUI
		* Fixed bug #0000253: Wrong set page titels in some admin templates
		* Fixed bug #0000252: Message typo errors in reseller and admin lostpw_email_setup.php
	- MISC
		* Fixed bug #0000251: Typo errors in filename

2005-12-04 Erik Lehmann

	- RELEASE
		* vhcs2.4.7-beta1

2005-12-03 Erik Lehmann

	- GUI
		* Fixed bug #0000247: Cross-Site-Scripting bug in gui/errordocs/index.php

2005-12-02 Erik Lehmann

	- GUI
		* Fixed bug #0000244: Useless code in /client/email-account.tpl

2005-12-01 Freres Frederic

	- GUI
		* Fixed: CatchAll Hijacking

2005-12-01  Erik Lehmann

	- ENGINE: