@@ -1,17 +1,38 @@
 
 #include "defs.h"
 
+int getopt(int argc, char * const argv[], const char *optstring);
+extern char *optarg;
+extern int optind, opterr, optopt;
+  
+
 int main(int argc, char **argv)
 {
-	int listenfd;
+	int listenfd, c;
 	struct sockaddr_in  servaddr;
 
 	int connfd;
 	struct sockaddr_in  cliaddr;
 
+	char *pidfile_path;
+	int given_pid;
+
 	pid_t childpid;
 
 	socklen_t clilen;
+
+	given_pid = 0;
+	pidfile_path = (char)'\0';
+	
+	while (( c = getopt( argc, argv, "p:" )) != EOF ) {
+	switch( c ) {
+	case 'p':
+	    pidfile_path = optarg;
+	    given_pid = 1;
+	    break;
+
+	}
+    }
 
 	daemon_init(message(MSG_DAEMON_NAME), SYSLOG_FACILITY);
 
@@ -54,6 +75,12 @@ int main(int argc, char **argv)
 
 	signal(SIGPIPE, sig_pipe);
 
+	if(given_pid) {
+		FILE *file = fopen(pidfile_path,"w");
+		fprintf(file,"%ld",(long)getpid());
+		fclose(file);
+	}
+	
 	for ( ; ; ) {
 
 		memset((void *) &cliaddr, '\0', sizeof(cliaddr));
