@@ -1,6 +1,12 @@
 VHCS 2.4.7 Changelog
 ~~~~~~~~~~~~~~~~~~~~~~~~~~
 
+2005-12-13 Erik Lehmann
+
+	- DAEMON:
+		* Added: parameter -p to create a pidfile at given path
+		* Changed: changed the init.d/vhcs_daemon to work with pidfile
+
 2005-12-12 Erik Lehmann
 
 	- GUI:
